--- a/src/main/resources/templates/ask_question.html
+++ b/src/main/resources/templates/ask_question.html
@@ -115,7 +115,7 @@
                             <li><a href="#"> 404 </a></li>
                         </ul>
                     </li>
-                    <li><a href="#" th:href="@{/contact_us}" th:text="#{navigation.contactus}">Contact us</a></li>
+                    <li><a href="#" th:href="@{/contact_us}" th:text="#{navigation.contact_us}">Contact us</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -196,7 +196,7 @@
                     <a href="#"><p>-Users</p></a>
                     <a href="#"><p>-Edit Profile</p></a>
                     <a href="#"><p>-Page</p></a>
-                    <a href="#" th:href="@{/contact_us}" th:text="#{navigation.contactus}"><p>-Contact Us</p></a>
+                    <a href="#" th:href="@{/contact_us}" th:text="#{navigation.contact_us}"><p>-Contact Us</p></a>
                     <a href="#"><p>-Buy now</p></a>
                 </div>
             </div>
