--- a/src/main/resources/templates/loginOld.html
+++ b/src/main/resources/templates/loginOld.html
@@ -97,7 +97,7 @@
                                             aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
                         <ul class="dropdown-menu animated zoomIn">
                             <li><a href="#" th:href="@{/login}">Login</a></li>
-                            <li><a href="#" th:href="@{/contact_us}" th:text="#{navigation.contactus}"> Contact Us</a>
+                            <li><a href="#" th:href="@{/contact_us}" th:text="#{navigation.contact_us}"> Contact Us</a>
                             </li>
                             <li><a href="#" th:href="@{/topics/new}"> Ask Question </a></li>
                             <li><a href="#" th:href="@{/topics}"> Post-Details </a></li>
