Attempted fix on search bar

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,16 +57,17 @@
             </div>
             <div class="col-md-6">
                 <div class="navbar-serch-right-side">
-                    <form class="navbar-form" role="search">
+                    <form class="navbar-form" role="search" action="/search/" method="get">
                         <div class="input-group add-on">
-                            <label for="srch-term"></label>
-                            <input class="form-control form-control222" placeholder="Search" id="srch-term" type="text">
+                            <label for="search"></label>
+                            <input class="form-control form-control222" placeholder="Search" id="search" name="search" type="text">
                             <div class="input-group-btn">
-                                <button class="btn btn-default btn-default2913" type="button"><i class="glyphicon glyphicon-search"></i></button>
+                                <button class="btn btn-default btn-default2913" type="submit"><i class="glyphicon glyphicon-search"></i></button>
                             </div>
                         </div>
                     </form>
                 </div>
+
 
             </div>
         </div>
