--- a/src/main/resources/templates/SearchBarView.html
+++ b/src/main/resources/templates/SearchBarView.html
@@ -14,7 +14,7 @@
   <title>Sex life & problems forum</title>
   <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.css}">
   <link href="../static/css/style.css" rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
-  <link href="../statis/css/animate.css" rel="stylesheet" type="text/css" th:href="@{/css/animate.css}">
+  <link href="../static/css/animate.css" rel="stylesheet" type="text/css" th:href="@{/css/animate.css}">
   <link href="../static/css/font-awesome.min.css" rel="stylesheet" type="text/css" th:href="@{/css/font-awesome.min.css}">
 </head>
 
@@ -26,42 +26,53 @@
       <div class="col-md-6">
         <div class="navbar-menu-left-side239">
           <ul>
-            <li><a href="mailto:telerikforums@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a></li>
-            <li><a href="#"><i class="fa fa-headphones" aria-hidden="true"></i>Support</a></li>
+            <li><a href="mailto:telerikforums@gmail.com">
+              <i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a>
+            </li>
+            <li><a href="#">
+              <i class="fa fa-headphones" aria-hidden="true"></i>Support</a>
+            </li>
             &nbsp;
-            <!-- Use Thymeleaf expression to check if the user is logged in -->
-            <li>
-              <!-- If the currentUser session attribute is not null, display the logout link -->
-              <a th:href="@{/auth/logout}" th:if="${session.currentUser} != null">
-                <i class="fa fa-sign-out" aria-hidden="true"></i>Logout
+            <li th:if="${session.currentUser} != null">
+              <!-- If the user is logged in, display the link to edit their profile -->
+              <a th:href="@{/users/profile}">
+                <i class="fa fa-user" aria-hidden="true"></i>&nbsp;
+                <span th:text="${session.currentUser}"></span>
               </a>
-              &nbsp;
+            </li>
+            &nbsp;
+            <li><a th:href="@{/auth/logout}" th:if="${session.currentUser} != null">
+              <i class="fa fa-sign-out" aria-hidden="true"></i>Logout
+            </a>
               <!-- If the currentUser session attribute is null, display the login link -->
               <a th:href="@{/auth/login}" th:if="${session.currentUser} == null">
                 <i class="fa fa-user" aria-hidden="true"></i>&nbsp;Login Area
               </a>
-              <!-- Display the username if the user is logged in -->
-              <span th:text="${session.currentUser}" th:if="${session.currentUser} != null"></span>
             </li>
+
+
           </ul>
         </div>
       </div>
       <div class="col-md-6">
         <div class="navbar-serch-right-side">
-          <form class="navbar-form" role="search">
+          <form class="navbar-form" role="search" action="/search/" method="get">
             <div class="input-group add-on">
-              <label for="srch-term"></label>
-              <input class="form-control form-control222" placeholder="Search" id="srch-term" type="text">
+              <label for="search"></label>
+              <input class="form-control form-control222" placeholder="Search" id="search" name="search" type="text">
               <div class="input-group-btn">
-                <button class="btn btn-default btn-default2913" type="button" th:field="*{title}"><i class="glyphicon glyphicon-search"></i></button>
+                <button class="btn btn-default btn-default2913" type="submit"><i class="glyphicon glyphicon-search"></i></button>
               </div>
             </div>
           </form>
         </div>
+
+
       </div>
     </div>
   </div>
 </div>
+
 
 
 <!-- ==========header mega navbar=======-->
@@ -71,14 +82,14 @@
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-        <a class="navbar-brand" href="#"><img src="/assets/img/flogo.png" alt="FLogo"></a>
+        <a class="navbar-brand" href="#" th:href="@{/}"><img src="/assets/img/flogo.png" alt="FLogo"></a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav"> </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="ask_question.html">Ask Question</a></li>
+          <li><a href="#" th:href="@{/}">Home</a></li>
+          <li th:if="${session.currentUser != null}"><a href="#" th:href="@{/topics/new}">Ask Question</a></li>
           <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Question <span class="caret"></span></a>
             <ul class="dropdown-menu animated zoomIn">
               <li><a href="category.html">Question Category</a></li>
@@ -89,24 +100,25 @@
             </ul>
           </li>
 
-          <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Blog <span class="caret"></span></a>
+          <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                  aria-haspopup="true" aria-expanded="false">Blog <span class="caret"></span></a>
             <ul class="dropdown-menu animated zoomIn">
               <li><a href="blog.html">Blog </a></li>
             </ul>
           </li>
-          <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
+          <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                                  aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
             <ul class="dropdown-menu animated zoomIn">
-              <li><a href="#" th:href="@{/login}">Login</a></li>
+              <li th:if="${session.currentUser} == null"><a href="#" th:href="@{/auth/login}" th:text="#{navigation.login}">Login</a></li>
+
+              <li th:if="${session.currentUser} != null"><a href="#" th:href="@{/topics/new}" th:text="#{navigation.create_topic}"> Ask Question </a></li>
+              <li th:if="${session.currentUser} != null"><a href="#" th:href="@{/topics}" th:text="#{navigation.list_all_topics}"> List all topics </a></li>
+              <li th:if="${session.currentUser} != null"><a href="#" th:href="@{/users}" th:text="#{navigation.list_all_users}">List all users</a></li>
+              <li th:if="${session.currentUser} != null"><a href="#" th:href="@{/tags}" th:text="#{navigation.list_all_tags}"> List all tags </a></li>
               <li><a href="#" th:href="@{/contact_us}" th:text="#{navigation.contact_us}"> Contact Us</a></li>
-              <li><a href="ask_question.html"> Ask Question </a></li>
-              <li><a href="#" th:href="@{/topics}"> Post-Details </a></li>
-              <li><a href="user.html">All User</a></li>
-              <li><a href="user_question.html"> User Question </a></li>
-              <li><a href="category.html"> Category </a></li>
-              <li><a href="#"> 404 </a></li>
             </ul>
           </li>
-          <li><a href="contact_us">Contact us</a></li>
+          <li><a href="#" th:href="@{/contact_us}" th:text="#{navigation.contact_us}">Contact us</a></li>
         </ul>
       </div>
       <!-- /.navbar-collapse -->
@@ -121,8 +133,6 @@
   <div class="container">
   </div>
 </section>
-
-
 <!-- ======content section/body=====-->
 <section class="main-content920">
   <div class="container">
@@ -144,10 +154,10 @@
                 <div class="col-md-9">
                   <div class="right-description893">
                     <div id="que-headder2983">
-                      <h3><a href="post_details.html" th:href="@{/topics/{id}(id=${topic.getId()})}" th:text="${topic.getTitle().length() > 40 ? topic.getTitle().substring(0, 40) + '...' : topic.getTitle()}" > </a></h3> </div>
+                      <h3><a href="#" th:href="@{/topics/{id}(id=${topic.getId()})}" th:text="${topic.getTitle().length() > 40 ? topic.getTitle().substring(0, 40) + '...' : topic.getTitle()}" > </a></h3> </div>
                     <a href="#" th:href="@{/users/{id}(id=${topic.getCreator().getId()})}" th:text="'Author: ' + ${topic.getCreator().getUsername()}"></a>
                     <div class="ques-details10018">
-                      <p th:utext="${topic.getContent().length() > 255 ? topic.getContent().substring(0, 255) + '...' : topic.getContent()}" />
+                      <p th:utext="${topic.getContent().length() > 255 ? topic.getContent().substring(0, 255) + '...' : topic.getContent()}"></p>
                     </div>
                     <hr>
                     <div class="ques-icon-info3293">
@@ -194,30 +204,6 @@
             </nav>
           </section>
           <!--  End of content-1------>
-
-          <section>
-            <!--End of content-5-->
-            <nav aria-label="Page navigation">
-              <ul class="pagination">
-                <li>
-                  <a href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                  </a>
-                </li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li>
-                  <a href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                  </a>
-                </li>
-              </ul>
-            </nav>
-          </section>
-
         </div>
       </div>
       <!--end of col-md-9 -->
@@ -239,47 +225,42 @@
         <!--             social part -->
         <div class="social-part2189">
           <h4>Find us</h4>
-          <li class="rss-one">
-            <a href="#" target="_blank"> <strong>
-              <span>Subscribe</span>
-              <i class="fa fa-rss" aria-hidden="true"></i>
-
-              <br>
-              <small>To RSS Feed</small>
-
-            </strong> </a>
-          </li>
-          <li class="facebook-two">
-            <a href="https://www.facebook.com/profile.php?id=100095611680778" target="_blank"> <strong>
-              <span>Follow us on</span>
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-
-              <br>
-              <small>Facebook</small>
-
-            </strong> </a>
-          </li>
-          <li class="twitter-three">
-            <a href="#" target="_blank"> <strong>
-              <span>Subscribe</span>
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-
-              <br>
-              <small>To twitter Feed</small>
-
-            </strong> </a>
-          </li>
-          <li class="youtube-four">
-            <a href="#" target="_blank"> <strong>
-              <span>Subscribe</span>
-              <i class="fa fa-youtube" aria-hidden="true"></i>
-
-              <br>
-              <small>To youtube Feed</small>
-
-            </strong> </a>
-          </li>
+          <ul> <!-- Wrap the li elements inside a ul element -->
+            <li class="rss-one">
+              <a href="#" target="_blank"> <strong>
+                <span>Subscribe</span>
+                <i class="fa fa-rss" aria-hidden="true"></i>
+                <br>
+                <small>To RSS Feed</small>
+              </strong> </a>
+            </li>
+            <li class="facebook-two">
+              <a href="https://www.facebook.com/profile.php?id=100095611680778" target="_blank"> <strong>
+                <span>Follow us on</span>
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+                <br>
+                <small>Facebook</small>
+              </strong> </a>
+            </li>
+            <li class="twitter-three">
+              <a href="#" target="_blank"> <strong>
+                <span>Subscribe</span>
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+                <br>
+                <small>To twitter Feed</small>
+              </strong> </a>
+            </li>
+            <li class="youtube-four">
+              <a href="#" target="_blank"> <strong>
+                <span>Subscribe</span>
+                <i class="fa fa-youtube" aria-hidden="true"></i>
+                <br>
+                <small>To youtube Feed</small>
+              </strong> </a>
+            </li>
+          </ul>
         </div>
+
         <!--              login part-->
         <div class="login-part2389">
           <h4>Login</h4>
@@ -456,10 +437,9 @@
     </div>
   </div>
 </section>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="../static/js/jquery-3.1.1.min.js" th:href="@{/js/jquery-3.1.1.min.js}"></script>
-<script src="../static/js/bootstrap.min.js" th:href="@{/js/bootstrap.min.js}"></script>
-<script src="../static/js/npm.js" th:href="@{/js/npm.js}"></script>
+<script src="/js/jquery-3.1.1.min.js" th:href="@{/js/jquery-3.1.1.min.js}"></script>
+<script src="/js/bootstrap.min.js" th:href="@{/js/bootstrap.min.js}"></script>
+<script src="/js/npm.js" th:href="@{/js/npm.js}"></script>
 </body>
 
 </html>
