--- a/src/main/resources/static/css/editor.css
+++ b/src/main/resources/static/css/editor.css
@@ -1,23 +1,9 @@
-
-
 @charset "utf-8";
 
 /* base styles */
 
 .jumbotron {
-    background-color: #67A754;
-    background-image: url(../static/image/radial_bg.png);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background: -webkit-gradient(radial, center center, 0, center center, 460, from(#B3ECFF), to(#7EDEFF));
-    /* Safari 4-5, Chrome 1-9 */
-    /* Can't specify a percentage size? Laaaaaame. */
-    background: -webkit-radial-gradient(circle, #B3ECFF, #7EDEFF);
-    /* Safari 5.1+, Chrome 10+ */
-    background: -moz-radial-gradient(circle, #B3ECFF, #7EDEFF);
-    /* Firefox 3.6+ */
-    background: -ms-radial-gradient(circle, #B3ECFF, #7EDEFF);
-    /* IE 10 */
+    background: #67A754 radial-gradient(circle at center center, #B3ECFF, #7EDEFF) no-repeat center center;
     box-shadow: 0 3px 7px rgba(0, 0, 0, 0.2) inset, 0 -3px 7px rgba(0, 0, 0, 0.2) inset;
     color: #FFFFFF;
     padding: 40px 0;
@@ -51,7 +37,6 @@
 }
 
 .jumbotron:after {
-    background: url("../static/images/pattern.png") repeat scroll center center transparent;
     bottom: 0;
     content: "";
     display: block;
@@ -122,8 +107,7 @@ h2.demo-text {
     border-color: #e6e6e6 #e6e6e6 #bfbfbf;
     border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
     border-bottom-color: #b3b3b3;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#ffe6e6e6', GradientType=0);
-    filter: progid: DXImageTransform.Microsoft.gradient(enabled=false);
+    filter: none;
     *zoom: 1;
 }
 
@@ -189,13 +173,15 @@ input[type="color"],
 
 #statusbar .label {
     float: right;
-    margin: 6px 10px 0 0;
+    margin: 0.375em 0.625em 0 0; /* Equivalent to 6px 10px 0 0 */
     background: #BBB;
-    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.25);
-    padding: 2px 4px;
-    font-size: 11.844px;
-    line-height: 14px;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    padding: 0.125em 0.25em; /* Equivalent to 2px 4px */
+    font-size: 0.938em; /* Equivalent to 11.844px */
+    line-height: 1.167em; /* Equivalent to 14px */
 }
+
+
 
 .Editor-editor {
     height: 300px;
@@ -217,11 +203,11 @@ input[type="color"],
     display: block;
     height: 16px;
     float: left;
-    margin: 0;
+    margin: 1px; /* Only one margin declaration */
     padding: 0;
     width: 16px;
-    margin: 1px;
 }
+
 
 #paletteCntr li div {
     text-align: left;
@@ -263,9 +249,10 @@ div.activeColour {
     float: left;
     margin: 10px;
     white-space: normal;
-    -webkit-padding-start: 0px;
-    -moz-padding-start: 0px;
+    -webkit-padding-start: 0;
+    -moz-padding-start: 0;
 }
+
 
 .specialCntr ul li {
     list-style: none;
@@ -287,16 +274,8 @@ div.activeColour {
 }
 
 pre {
-    white-space: pre-wrap;
-    /* css-3 */
-    white-space: -moz-pre-wrap;
-    /* Mozilla, since 1999 */
-    white-space: -pre-wrap;
-    /* Opera 4-6 */
-    white-space: -o-pre-wrap;
-    /* Opera 7 */
-    word-wrap: break-word;
-    /* Internet Explorer 5.5+ */
+    white-space: pre-wrap; /* CSS-3 standard */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 
 .on {
@@ -335,7 +314,7 @@ pre {
 }
 
 .tabs-left ul {
-    -webkit-padding-start: 0px;
+    -webkit-padding-start: 0;
 }
 
 .tabs-left > .nav-tabs > li,
@@ -411,8 +390,8 @@ pre {
 }
 
 .activeColour ul {
-    -webkit-padding-start: 0px;
-    -moz-padding-start: 0px;
+    -webkit-padding-start: 0;
+    -moz-padding-start: 0;
 }
 
 h1 {
@@ -420,16 +399,16 @@ h1 {
     line-height: 40px;
 }
 
-.col-lg-6 nth:child(1) {
-    margin-left: 0px;
+.col-lg-6:nth-child(1) {
+    margin-left: 0;
 }
 
 .nopadding {
-    padding: 0px;
+    padding: 0;
 }
 
 .nopadding-right {
-    padding-right: 0px;
+    padding-right: 0;
 }
 
 .modal {
@@ -499,8 +478,9 @@ h1 {
     text-decoration: none;
     background-color: #FF7361;
     background-repeat: repeat-x;
-    filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
+    background-image: linear-gradient(#0088cc, #0077b3); /* Modern linear gradient */
 }
+
 
 .dropdown-menu>li>a {
     cursor: pointer;
