--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2355,3 +2355,7 @@ h5:hover {
 .emoticon-container img {
     margin: 5px; /* You can adjust the margin as needed */
 }
+
+.ques-type302b {
+    text-align: left;
+}
