Navbar and footer separated as fragments

--- a/src/main/resources/templates/ask_question.html
+++ b/src/main/resources/templates/ask_question.html
@@ -149,14 +149,9 @@
                         <div class="details2-239">
                             <div class="col-md-12 nopadding">
                                 <span class="form-description433">Content* </span>
-                                <label for="txtEditor"></label>
-                                <textarea id="txtEditor" class="question-textarea"></textarea>
+                                <label for="content"></label>
+                                <textarea id="content" class="question-textarea"></textarea>
                             </div>
-                        </div>
-
-                        <div class="button-group-addfile3239">
-                            <span class="form-description23993">Attachment*</span>
-                            <input type="file" name="ffile" class="question-ttile3226">
                         </div>
                     </form>
 
@@ -277,7 +272,7 @@
 
 <script>
     $(document).ready(function () {
-        $("#txtEditor").Editor();
+        $("#content").Editor();
     });
 </script>
 
