--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -421,7 +421,7 @@
     <script src="js/editor.js"></script>
     <script>
         $(document).ready(function () {
-            $("#txtEditor").Editor();
+            $("#content").Editor();
         });
     </script>
 </body>
