--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -120,7 +120,7 @@
                                 </div>
                                 <div class="col-md-9">
                                     <div class="right-description893">
-                                        <div id="que-hedder2983">
+                                        <div id="que-hedder2983a">
                                             <h3><a href="post_details.html" target="_blank"> What is HTML?</a></h3> </div>
                                         <div class="ques-details10018">
                                             <p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.</p>
@@ -150,7 +150,7 @@
                                 </div>
                                 <div class="col-md-9">
                                     <div class="right-description893">
-                                        <div id="que-hedder2983">
+                                        <div id="que-hedder2983b">
                                             <h3><a href="post_details.html" target="_blank">What are Tags?</a></h3> </div>
                                         <div class="ques-details10018">
                                             <p>Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.Duis dapibus aliquam mi, eget euismod sem scelerisque ut. Vivamus at elit quis urna adipiscing iaculis.</p>
@@ -676,7 +676,7 @@
     <script src="js/editor.js"></script>
     <script>
         $(document).ready(function () {
-            $("#txtEditor").Editor();
+            $("#content").Editor();
         });
     </script>
 </body>
