--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
@@ -20,114 +20,7 @@
 </head>
 
 <body>
-<!--======== Navbar =======-->
-<div class="top-bar">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="navbar-menu-left-side239">
-                    <ul>
-                        <li><a href="mailto:telerikforums@gmail.com">
-                            <i class="fa fa-envelope-o" aria-hidden="true"></i>Contact</a>
-                        </li>
-                        <li><a href="#">
-                            <i class="fa fa-headphones" aria-hidden="true"></i>Support</a>
-                        </li>
-                        &nbsp;
-                        <li th:if="${session.currentUser} != null">
-                                    <!-- If the user is logged in, display the link to edit their profile -->
-                                    <a th:href="@{/users/profile}">
-                                        <i class="fa fa-user" aria-hidden="true"></i>&nbsp;
-                                        <span th:text="${session.currentUser}"></span>
-                                    </a>
-                        </li>
-                        &nbsp;
-                        <li><a th:href="@{/auth/logout}" th:if="${session.currentUser} != null">
-                            <i class="fa fa-sign-out" aria-hidden="true"></i>Logout
-                        </a>
-                            <!-- If the currentUser session attribute is null, display the login link -->
-                            <a th:href="@{/auth/login}" th:if="${session.currentUser} == null">
-                                <i class="fa fa-user" aria-hidden="true"></i>&nbsp;Login Area
-                            </a>
-                        </li>
-
-
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="navbar-serch-right-side">
-                    <form class="navbar-form" role="search" action="/search/" method="get">
-                        <div class="input-group add-on">
-                            <label for="search"></label>
-                            <input class="form-control form-control222" placeholder="Search" id="search" name="search" type="text">
-                            <div class="input-group-btn">
-                                <button class="btn btn-default btn-default2913" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-
-
-            </div>
-        </div>
-    </div>
-</div>
-
-
-
-<!-- ==========header mega navbar=======-->
-<div class="top-menu-bottom932">
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-                <a class="navbar-brand" href="#"><img src="/assets/img/flogo.png" alt="FLogo"></a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav"> </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#" th:href="@{/}">Home</a></li>
-                    <li th:if="${session.currentUser != null}"><a href="#" th:href="@{/topics/new}">Ask Question</a></li>
-                    <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Question <span class="caret"></span></a>
-                        <ul class="dropdown-menu animated zoomIn">
-                            <li><a href="category.html">Question Category</a></li>
-                            <li><a href="category.html">HTML</a></li>
-                            <li><a href="category.html">CSS</a></li>
-                            <li><a href="category.html">Javascript</a></li>
-                            <li><a href="category.html">Bootstrap</a></li>
-                        </ul>
-                    </li>
-
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                            aria-haspopup="true" aria-expanded="false">Blog <span class="caret"></span></a>
-                        <ul class="dropdown-menu animated zoomIn">
-                            <li><a href="blog.html">Blog </a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                                            aria-haspopup="true" aria-expanded="false">Page <span class="caret"></span></a>
-                        <ul class="dropdown-menu animated zoomIn">
-                            <li th:if="${session.currentUser} == null"><a href="#" th:href="@{/auth/login}" th:text="#{navigation.login}">Login</a></li>
-
-                            <li th:if="${session.currentUser} != null"><a href="#" th:href="@{/topics/new}" th:text="#{navigation.create_topic}"> Ask Question </a></li>
-                            <li th:if="${session.currentUser} != null"><a href="#" th:href="@{/topics}" th:text="#{navigation.list_all_topics}"> List all topics </a></li>
-                            <li th:if="${session.currentUser} != null"><a href="#" th:href="@{/users}" th:text="#{navigation.list_all_users}">List all users</a></li>
-                            <li th:if="${session.currentUser} != null"><a href="#" th:href="@{/tags}" th:text="#{navigation.list_all_tags}"> List all tags </a></li>
-                            <li><a href="#" th:href="@{/contact_us}" th:text="#{navigation.contact_us}"> Contact Us</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#" th:href="@{/contact_us}" th:text="#{navigation.contact_us}">Contact us</a></li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-</div>
-
+<div th:replace="fragments/navbar :: navbar"></div>
 
 <!--======= welcome section on top background=====-->
 <section class="welcome-part-one">
@@ -600,113 +493,12 @@
     </div>
 </section>
 <!--    footer -->
-<section class="footer-part">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <div class="info-part-one320">
-                    <h4>Where We Are ?</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi adipiscing gravida odio, sit amet
-                        suscipit risus ultrices eu.</p>
-                    <h4>Address :</h4>
-                    <p>Ask Me Network, 33 Street, syada
-                        <br> Sofia, Bulgaria</p>
-                    <h4>Support :</h4>
-                    <p>Support Telephone No : (+2)01111011110</p>
-                    <p>Support Email Account : </p>
-                    <p>telerikforums@gmail.com</p>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info-part-two320">
-                    <h4>Quick Links</h4>
-                    <a href="#">
-                        <p>-Home</p>
-                    </a>
-                    <a href="#">
-                        <p>-Ask Question</p>
-                    </a>
-                    <a href="#">
-                        <p>-Questions</p>
-                    </a>
-                    <a href="#">
-                        <p>-Users</p>
-                    </a>
-                    <a href="#">
-                        <p>-Edit Profile</p>
-                    </a>
-                    <a href="#">
-                        <p>-Page</p>
-                    </a>
-                    <a href="#">
-                        <p>-Contact Us</p>
-                    </a>
-                    <a href="contact_us.html" class="last-child12892">
-                        <p>-Buy now</p>
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info-part-three320">
-                    <h4>Popular Questions</h4>
-                    <div class="news-info209">
-                        <h5>Why are the British confused</h5>
-                        <p>(Why I darest say, they darest not get offended when they so ...</p> <small>July 16,
-                        2017</small></div>
-                    <div class="news-info209">
-                        <h5>How to approach applying for</h5>
-                        <p>(I am trying to find/change my career trajectory. Its a good cozy ...</p> <small>July 16,
-                        2017</small></div>
-                    <div class="news-info209">
-                        <h5>How to evaluate whether a</h5>
-                        <p>A friend of mine is the CEO of his own small business. ...</p> <small>July 16, 2017</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="info-part-four320">
-                    <h4>Latest Tweets</h4>
-                    <div class="tweet-details29">
-                        <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a href="#"> codeThemesCheck a new
-                            update #AskMe #ThemeForest #WordPress #2code #Envato#2code
-                            Themehttps://t.co/urb3LgsOCi</a></p> <small>about 2 weeks ago</small></div>
-                    <div class="tweet-details29">
-                        <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a href="#"> codeThemesCheck a new
-                            update #AskMe #ThemeForest #WordPress #2code #Envato#2code
-                            Themehttps://t.co/urb3LgsOCi</a></p> <small>about 2 weeks ago</small></div>
-                    <div class="tweet-details29">
-                        <p><i class="fa fa-twitter-square" aria-hidden="true"></i><a href="#"> codeThemesCheck a new
-                            update #AskMe #ThemeForest #WordPress #2code #Envato#2code
-                            Themehttps://t.co/urb3LgsOCi</a></p> <small>about 2 weeks ago</small></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="footer-social">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <p>Copyright 2023 - Sex forums | <strong>Team 10 @ Telerik A48 Java Cohort</strong></p>
-            </div>
-            <div class="col-md-6">
-                <div class="social-right2389"><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a> <a
-                        href="https://www.facebook.com/profile.php?id=100095611680778"><i class="fa fa-facebook"
-                                                                                          aria-hidden="true"></i></a> <a
-                        href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a> <a href="#"><i
-                        class="fa fa-youtube" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-skype"
-                                                                                         aria-hidden="true"></i></a> <a
-                        href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a> <a href="#"><i class="fa fa-rss"
-                                                                                                      aria-hidden="true"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+
+<div th:replace="fragments/footer :: footer"></div>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="/js/jquery-3.1.1.min.js" th:href="@{/js/jquery-3.1.1.min.js}"></script>
 <script src="/js/bootstrap.min.js" th:href="@{/js/bootstrap.min.js}"></script>
-<script src="/js/npm.js" th:href="@{/js/npm.js}"></script>
 </body>
 
 </html>
