--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -426,7 +426,7 @@
     <script src="js/editor.js"></script>
     <script>
         $(document).ready(function () {
-            $("#txtEditor").Editor();
+            $("#content").Editor();
         });
     </script>
 </body>
