--- a/src/main/resources/templates/user_question.html
+++ b/src/main/resources/templates/user_question.html
@@ -450,7 +450,7 @@
     <script src="../static/js/editor.js"></script>
     <script>
         $(document).ready(function () {
-            $("#txtEditor").Editor();
+            $("#content").Editor();
         });
     </script>
 </body>
